--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "yaml": "^1.10.2"
   },
   "scripts": {
+    "start":"parcel index.html && parcel watch index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "WhyNotSantosh",
